# databricks-shared-clusters-cost-calculator

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: push.yml
docs/: architecture.excalidraw
lake_view/: Populate User Info - Demo.py  dashboard.json  dashboard_template.json  demo_setup.py  user_info_demo.py
resources/: calculate_job.yml  clean_up_data_job.yml  cost_calculation_job.yml  cost_monitoring_job.yml  create_tables_job.yml  define_budget_job.yml  delete_user_data_job.yml  deploy_create_alerts_job.yml  deploy_create_dbsql_objects_job.yml  deploy_create_tables_job.yml  deploy_tables_job.yml  fetch_user_info_job.yml  user_info_job.yml
src/: calculate_daily_costs.py  calculate_monthly_costs.py  clean_up_data.sql  cost_monitoring_lakeview_dashboard.lvdash.json  create_alerts.py  create_dashboard.py  create_tables.sql  define_budget.sql  delete_user_data.sql  fetch_user_info.py  fetch_user_info_ad.py  fetch_user_info_from_entra_id.py  run_cost_agg_day.py
src/clusters_cost_allocation/: cost_calculator.py  dbsql_handler.py  dbsql_queries.py  main.py  metrics.py
src/cost_monitoring/: main.py
tests/unit/: metrics_test.py  schema_definitions.py  test_cost_calculator.py  test_cost_monitoring.py  test_data_prep.py
