[tool.poetry]
name = "clusters-cost-allocation"
version = "0.0.1"
description = "Application for granular cost allocation of SQL Warehouses"
authors = ["Marcin Wojtyczka <wojtyczka.marcin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pyspark = "3.5.0"
pytest = "^8.0.1"
pytest-cov = "^4.0.0"
pytest-spark = "^0.6.0"
chispa = "^0.9.2"
databricks-sdk = "^0.29.0"
databricks-connect = "14.2.1" # cannot be higher than DBR version!

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "clusters_cost_allocation.main:main"
